# db2-compression

./: .gitignore  CMakeLists.txt  README.md  base_column.cpp  main  main.cpp  run_test.sh  unittest.hpp
compression/: delta_coding_compressed_column.hpp  dictionary_compressed_column.hpp
core/: base_column.hpp  column.hpp  column_base_typed.hpp  compressed_column.hpp  global_definitions.hpp
data/: float column  int column  int column-meta  string column  string column-meta
doc/: warnings.txt
